[gd_scene load_steps=34 format=2]

[ext_resource path="res://Game/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/FontResources/Small/BoldFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Themes/TabContainerEmptyStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/Titillium-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/MapAndTimePanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/TooltipDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Events/EventSystem.gd" type="Script" id=8]
[ext_resource path="res://Quests/QuestSystem.gd" type="Script" id=9]
[ext_resource path="res://Game/Pregnancy/ChildSystem.gd" type="Script" id=10]
[ext_resource path="res://UI/CharactersArtworkPanel/CharactersArtworkPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Game/PlayerPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://Game/CharacterPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/CharactersPanel.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/MainMenu/InGameMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/SkillsUI/SkillsUI.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/DebugUI/DebugPanel.tscn" type="PackedScene" id=17]
[ext_resource path="res://Game/MainScene.gd" type="Script" id=18]
[ext_resource path="res://UI/Options/OptionsScreen.tscn" type="PackedScene" id=19]
[ext_resource path="res://UI/MainMenu/CreditsScreen.tscn" type="PackedScene" id=20]
[ext_resource path="res://UI/ModsMenu/ModsMenu.tscn" type="PackedScene" id=21]
[ext_resource path="res://UI/MainMenu/LoadGameScreen.tscn" type="PackedScene" id=22]
[ext_resource path="res://Util/SceneConverter.tscn" type="PackedScene" id=23]
[ext_resource path="res://UI/LikesGenerator/NpcLikesGenerator.tscn" type="PackedScene" id=24]
[ext_resource path="res://UI/QuickCharacterCreator/QuickCharacterCreator.tscn" type="PackedScene" id=25]
[ext_resource path="res://UI/ModMaker/ModMaker.tscn" type="PackedScene" id=26]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=27]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_right = 16
corner_radius_bottom_right = 16

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=8]
script/source = "extends RichTextLabel

func _ready():
	var _ok = GlobalRegistry.connect(\"donationDataUpdated\", self, \"updateDonationData\")
	updateDonationData()
	
func updateDonationData():
	bbcode_text = GlobalRegistry.getDonationDataString()
"

[sub_resource type="GDScript" id=12]
script/source = "extends MarginContainer

var current_font_size 		= \"\"
var textboxes 				= {}

var simple_text				= \"\"

onready var text 			= $GameText/Fitter/Text
onready var fitter			= $GameText/Fitter
onready var scroll			= $GameText

onready var uiTextboxScene 	= preload(\"res://UI/UITextbox.tscn\")

func _ready():
	text.selection_enabled = OS.has_touchscreen_ui_hint()

func _physics_process(_delta):
	text.bbcode_text = \"[fill]\" + simple_text + \"[/fill]\"
	
	if current_font_size != OPTIONS.getFontSize():
		current_font_size = OPTIONS.getFontSize()
		
		match current_font_size:
			\"big\":
				text.add_font_override(\"normal_font\", load(\"res://UI/FontResources/Big/NormalFont.tres\"))
				text.add_font_override(\"italics_font\", load(\"res://UI/FontResources/Big/ItalicsFont.tres\"))
				text.add_font_override(\"bold_italics_font\", load(\"res://UI/FontResources/Big/BoldItalicsFont.tres\"))
				text.add_font_override(\"bold_font\", load(\"res://UI/FontResources/Big/BoldFont.tres\"))
			\"small\":
				text.add_font_override(\"normal_font\", load(\"res://UI/FontResources/Small/NormalFont.tres\"))
				text.add_font_override(\"italics_font\", load(\"res://UI/FontResources/Small/ItalicsFont.tres\"))
				text.add_font_override(\"bold_italics_font\", load(\"res://UI/FontResources/Small/BoldItalicsFont.tres\"))
				text.add_font_override(\"bold_font\", load(\"res://UI/FontResources/Small/BoldFont.tres\"))
			_:
				text.add_font_override(\"normal_font\", load(\"res://UI/FontResources/Normal/NormalFont.tres\"))
				text.add_font_override(\"italics_font\", load(\"res://UI/FontResources/Normal/ItalicsFont.tres\"))
				text.add_font_override(\"bold_italics_font\", load(\"res://UI/FontResources/Normal/BoldItalicsFont.tres\"))
				text.add_font_override(\"bold_font\", load(\"res://UI/FontResources/Normal/BoldFont.tres\"))

func addUITextbox(id):
	assert(!textboxes.has(id), \"Trying to add a textbox with the same id. Id is \"+id)
	
	var uitextbox = uiTextboxScene.instance()
	uitextbox.id = id
	fitter.add_child(uitextbox)
	uitextbox.grab_focus()
	textboxes[id] = uitextbox
	
func addCustomControl(id, control):
	assert(!textboxes.has(id), \"Trying to add a control with the same id. Id is \"+id)

	fitter.add_child(control)
	textboxes[id] = control

func getUIdata(id):
	assert(textboxes.has(id), \"Trying to get info from bad id. Id is \"+id)
	return textboxes[id].getData()

func clearUItextboxes():
	for id in textboxes.keys():
		var textbox = textboxes[id]
		textbox.queue_free()
	textboxes = {}

func add_text(new_text: String):
	simple_text += new_text

func clearText():
	scroll.set_v_scroll(0)
	simple_text = \"\"

func trimLineEndings():
	simple_text = simple_text.trim_suffix(\"\\n\")
"

[sub_resource type="StyleBoxFlat" id=11]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="Main" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30
script = ExtResource( 3 )

[node name="LeftPanel" type="Panel" parent="."]
show_behind_parent = true
margin_right = 260.0
margin_bottom = 720.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ContentPanel" type="VBoxContainer" parent="LeftPanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 244.0
margin_bottom = 704.0

[node name="Scroll" type="ScrollContainer" parent="LeftPanel/MarginContainer/ContentPanel"]
margin_right = 228.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 27 )

[node name="ChangableContent" type="TabContainer" parent="LeftPanel/MarginContainer/ContentPanel/Scroll"]
margin_right = 228.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 4 )
tabs_visible = false

[node name="Donations" type="RichTextLabel" parent="LeftPanel/MarginContainer/ContentPanel/Scroll/ChangableContent"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = SubResource( 9 )
bbcode_enabled = true
fit_content_height = true
script = SubResource( 8 )

[node name="NPC_panel" type="VBoxContainer" parent="LeftPanel/MarginContainer/ContentPanel/Scroll/ChangableContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CharacterPanel" parent="LeftPanel/MarginContainer/ContentPanel/Scroll/ChangableContent/NPC_panel" instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 228.0
margin_bottom = 136.0

[node name="CharactersPanel" parent="LeftPanel/MarginContainer/ContentPanel/Scroll/ChangableContent/NPC_panel" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 228.0
margin_bottom = 196.0

[node name="CharactersArtworkPanel" parent="LeftPanel/MarginContainer/ContentPanel/Scroll/ChangableContent/NPC_panel" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 228.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LGamePanel" type="VBoxContainer" parent="LeftPanel/MarginContainer/ContentPanel"]
margin_top = 308.0
margin_right = 228.0
margin_bottom = 688.0

[node name="MapAndTimePanel" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 228.0
margin_bottom = 260.0

[node name="QSaveLoad" type="HBoxContainer" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel"]
margin_top = 264.0
margin_right = 228.0
margin_bottom = 290.0
custom_constants/separation = 10

[node name="QSaveBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/QSaveLoad"]
margin_right = 109.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Q. Save"

[node name="QLoadBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/QSaveLoad"]
margin_left = 119.0
margin_right = 228.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Q. Load"

[node name="MenusCaller" type="HBoxContainer" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel"]
margin_top = 294.0
margin_right = 228.0
margin_bottom = 320.0
custom_constants/separation = 10

[node name="ToSkillsBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/MenusCaller"]
margin_right = 109.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Skills"

[node name="ToPauseBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/MenusCaller"]
margin_left = 119.0
margin_right = 228.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Menu"

[node name="Pages" type="HBoxContainer" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel"]
margin_top = 324.0
margin_right = 228.0
margin_bottom = 350.0
custom_constants/separation = 10

[node name="PrevPageBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/Pages"]
margin_right = 109.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "<- Page"

[node name="NextPageBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel/Pages"]
margin_left = 119.0
margin_right = 228.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Page ->"

[node name="DebugBt" type="Button" parent="LeftPanel/MarginContainer/ContentPanel/LGamePanel"]
margin_top = 354.0
margin_right = 228.0
margin_bottom = 380.0
text = "Debug Menu"

[node name="CentrPanel" type="VBoxContainer" parent="."]
margin_left = 290.0
margin_right = 1004.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ContentSwitcher" type="TabContainer" parent="CentrPanel"]
margin_right = 714.0
margin_bottom = 687.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_styles/panel = ExtResource( 4 )
tab_align = 0
tabs_visible = false

[node name="Title" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 1 )]

[node name="Margin" type="MarginContainer" parent="CentrPanel/ContentSwitcher"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10
script = SubResource( 12 )

[node name="GameText" type="ScrollContainer" parent="CentrPanel/ContentSwitcher/Margin"]
margin_top = 20.0
margin_right = 714.0
margin_bottom = 677.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false
script = ExtResource( 27 )

[node name="Fitter" type="VBoxContainer" parent="CentrPanel/ContentSwitcher/Margin/GameText"]
margin_right = 714.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Text" type="RichTextLabel" parent="CentrPanel/ContentSwitcher/Margin/GameText/Fitter"]
margin_right = 700.0
margin_bottom = 63.0
focus_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[i]new one[/i]
[b]new one[/b]
new one"
text = "new one
new one
new one"
fit_content_height = true
selection_enabled = true

[node name="InGameMenu" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 15 )]
visible = false

[node name="SkillsUI" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 16 )]
visible = false

[node name="DebugPanel" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 17 )]
visible = false

[node name="OptionsScreen" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 19 )]
visible = false

[node name="CreditsScreen" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 20 )]
visible = false

[node name="ModsMenu" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 21 )]
visible = false

[node name="LoadGameScreen" parent="CentrPanel/ContentSwitcher" instance=ExtResource( 22 )]
visible = false

[node name="DevToolsScreen" type="TabContainer" parent="CentrPanel/ContentSwitcher"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
tabs_visible = false

[node name="SceneConverter" parent="CentrPanel/ContentSwitcher/DevToolsScreen" instance=ExtResource( 23 )]

[node name="NpcLikesGenerator" parent="CentrPanel/ContentSwitcher/DevToolsScreen" instance=ExtResource( 24 )]
visible = false

[node name="QuickCharacterCreator" parent="CentrPanel/ContentSwitcher/DevToolsScreen" instance=ExtResource( 25 )]
visible = false

[node name="ModMaker" parent="CentrPanel/ContentSwitcher/DevToolsScreen" instance=ExtResource( 26 )]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CentrPanel"]
margin_top = 691.0
margin_right = 714.0
margin_bottom = 691.0

[node name="Pad" type="GridContainer" parent="CentrPanel/MarginContainer"]
show_behind_parent = true
margin_right = 714.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="ColorRect" type="Panel" parent="CentrPanel/MarginContainer"]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 714.0
mouse_default_cursor_shape = 8
custom_styles/panel = SubResource( 11 )

[node name="UsefulPlaceholder" type="Control" parent="CentrPanel"]
margin_top = 695.0
margin_right = 714.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 25 )

[node name="RightPanel" type="Panel" parent="."]
show_behind_parent = true
margin_left = 1034.0
margin_right = 1294.0
margin_bottom = 720.0
rect_min_size = Vector2( 260, 0 )
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ContentPanel" type="VBoxContainer" parent="RightPanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 244.0
margin_bottom = 704.0

[node name="Scroll" type="ScrollContainer" parent="RightPanel/MarginContainer/ContentPanel"]
margin_right = 228.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 27 )

[node name="ChangebleContent" type="TabContainer" parent="RightPanel/MarginContainer/ContentPanel/Scroll"]
margin_right = 228.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 4 )
tabs_visible = false

[node name="GithubPanel" type="VBoxContainer" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GithubInfo" type="Label" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_right = 228.0
margin_bottom = 43.0
text = "Latest Github relese:
loading..."
autowrap = true

[node name="ToGihubBt" type="Button" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_top = 47.0
margin_right = 228.0
margin_bottom = 73.0
text = "Github Releases"

[node name="HSeparator2" type="HSeparator" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_top = 77.0
margin_right = 228.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_top = 85.0
margin_right = 228.0
margin_bottom = 105.0
text = "MODS:"
align = 1

[node name="HSeparator" type="HSeparator" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_top = 109.0
margin_right = 228.0
margin_bottom = 113.0

[node name="ScrollContainer" type="ScrollContainer" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel"]
margin_top = 117.0
margin_right = 228.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 27 )

[node name="LoadedModsLabel" type="RichTextLabel" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel/ScrollContainer"]
margin_right = 228.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/bold_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true

[node name="PlayerPanel" parent="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent" instance=ExtResource( 12 )]
visible = false

[node name="TooltipLayer" type="CanvasLayer" parent="."]

[node name="TooltipDisplay" parent="TooltipLayer" instance=ExtResource( 7 )]
margin_left = 112.0
margin_top = -169.0
margin_right = 362.0
margin_bottom = -48.0

[node name="EventSystem" type="Node" parent="."]
script = ExtResource( 8 )

[node name="ChildSystem" type="Node" parent="."]
script = ExtResource( 10 )

[node name="QuestSystem" type="Node" parent="."]
script = ExtResource( 9 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MainScene" type="Node" parent="."]
script = ExtResource( 18 )

[connection signal="on_option_button" from="." to="MainScene" method="_on_Main_on_option_button"]
[connection signal="ready" from="." to="MainScene" method="_on_Main_ready"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/QSaveLoad/QSaveBt" to="." method="_on_QSaveBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/QSaveLoad/QLoadBt" to="." method="_on_QLoadBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/MenusCaller/ToSkillsBt" to="." method="_on_ToSkillsBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/MenusCaller/ToPauseBt" to="." method="_on_ToPauseBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/Pages/PrevPageBt" to="." method="_on_PrevPageBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/Pages/NextPageBt" to="." method="_on_NextPageBt_pressed"]
[connection signal="pressed" from="LeftPanel/MarginContainer/ContentPanel/LGamePanel/DebugBt" to="." method="_on_DebugBt_pressed"]
[connection signal="onResumeButtonPressed" from="CentrPanel/ContentSwitcher/InGameMenu" to="." method="_on_InGameMenu_onResumeButtonPressed"]
[connection signal="onClosePressed" from="CentrPanel/ContentSwitcher/SkillsUI" to="." method="_on_SkillsUI_onClosePressed"]
[connection signal="pressed" from="RightPanel/MarginContainer/ContentPanel/Scroll/ChangebleContent/GithubPanel/ToGihubBt" to="." method="_on_ToGihubBt_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
